# warmwalrus

./: README.md  README.org  pyproject.toml
src/warmwalrus/: __init__.py  age_parser.py  cli.py  file_finder.py  file_processor.py  logger.py
src/warmwalrus/strategies/: __init__.py  base.py  claude_url.py  file_renamer.py  newline_padding.py  registry.py
