[project]
name = "warmwalrus"
version = "0.1.0"
description = "CLI tool for cleaning marker delimiters from files"
readme = "README.md"
authors = [{ name = "Taylor Monacelli", email = "taylormonacelli@gmail.com" }]
requires-python = ">=3.12"
dependencies = ["pathvalidate"]
[project.scripts]
warmwalrus = "warmwalrus:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = ["I"]
extend-safe-fixes = ["F401"]

[dependency-groups]
dev = [
    "ty>=0.0.1a11",
]
